Fixing flexbox gap property missing in some Safari versions

--- a/css/queries.css
+++ b/css/queries.css
@@ -129,7 +129,8 @@
     }
 
     .main-nav {
-        background-color: rgba(255, 255, 255, 0.95);
+        background-color: rgba(255, 255, 255, 0.9);
+        -webkit-backdrop-filter: blur(50px);
         position: absolute;
         top: 0;
         left: 0;
